fix: Adjusted spacing

--- a/css/project1.css
+++ b/css/project1.css
@@ -87,7 +87,7 @@ a, a:visited {
 
 .course_title {
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     font-weight: normal;
 }
 
@@ -105,6 +105,7 @@ a, a:visited {
 
 .course_image {
     width: 95%;
+    margin-top: 0px;
 }
 
 .project_title {
